lib/flutter_rust_ffi_bindings_generated2.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;
import 'ffi_struct.dart';

/// Bindings for `rust/rust_api_test2.h`.
///
/// Regenerate bindings with `dart run ffigen --config ffigen2.yaml`.
///
class FlutterRustFfiBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  FlutterRustFfiBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  FlutterRustFfiBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  /// \brief
  ///
  /// @author <a href="mailto:angcyo@126.com">angcyo</a>
  /// @date 2026-03-13
  ///
  /// 测试布尔类型的参数传输
  /// @return 取反
  bool test_bool2(
    bool value,
  ) {
    return _test_bool2(
      value,
    );
  }

  late final _test_bool2Ptr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Bool)>>('test_bool2');
  late final _test_bool2 = _test_bool2Ptr.asFunction<bool Function(bool)>();

  /// \brief
  /// 测试字节类型的参数传输
  Vec_uint8_t test_bytes2(
    ffi.Pointer<Vec_uint8_t> value,
  ) {
    return _test_bytes2(
      value,
    );
  }

  late final _test_bytes2Ptr = _lookup<
          ffi.NativeFunction<Vec_uint8_t Function(ffi.Pointer<Vec_uint8_t>)>>(
      'test_bytes2');
  late final _test_bytes2 = _test_bytes2Ptr
      .asFunction<Vec_uint8_t Function(ffi.Pointer<Vec_uint8_t>)>();

  /// \brief
  /// 测试双精度浮点类型的参数传输
  double test_double2(
    double value,
  ) {
    return _test_double2(
      value,
    );
  }

  late final _test_double2Ptr =
      _lookup<ffi.NativeFunction<ffi.Double Function(ffi.Double)>>(
          'test_double2');
  late final _test_double2 =
      _test_double2Ptr.asFunction<double Function(double)>();

  /// \brief
  /// 测试浮点类型的参数传输
  double test_float2(
    double value,
  ) {
    return _test_float2(
      value,
    );
  }

  late final _test_float2Ptr =
      _lookup<ffi.NativeFunction<ffi.Float Function(ffi.Float)>>('test_float2');
  late final _test_float2 =
      _test_float2Ptr.asFunction<double Function(double)>();

  /// \brief
  /// 测试整数类型的参数传输
  int test_int2(
    int value,
  ) {
    return _test_int2(
      value,
    );
  }

  late final _test_int2Ptr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Int32)>>('test_int2');
  late final _test_int2 = _test_int2Ptr.asFunction<int Function(int)>();

  /// \brief
  /// 测试字符串类型的参数传输
  Vec_uint8_t test_string2(
    ffi.Pointer<Vec_uint8_t> value,
  ) {
    return _test_string2(
      value,
    );
  }

  late final _test_string2Ptr = _lookup<
          ffi.NativeFunction<Vec_uint8_t Function(ffi.Pointer<Vec_uint8_t>)>>(
      'test_string2');
  late final _test_string2 = _test_string2Ptr
      .asFunction<Vec_uint8_t Function(ffi.Pointer<Vec_uint8_t>)>();
}
